# huggingface-cloth-segmentation

./: .gitignore  demo_synthesis.py  pyproject.toml  synthesis.py
